Allow the brush settings lists to respond to drag inputs

Dragging the mouse/pen across options/sensors will now effectively
select the last highlighted option/sensor, instead of doing nothing

BUG:425526